--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "prod": "next start",
+    "lint": "next lint",
+    "dev:up": "docker-compose -f docker-compose.dev.yml up",
+    "prod:up": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -32,10 +35,12 @@
     "tls": "^0.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
+    "@types/node": "^17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
