[FE] Feat: Build Nodejs Code editor

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@monaco-editor/react": "^4.4.5",
+    "@types/lodash": "^4.14.185",
     "axios": "^0.27.2",
     "binance-api-node": "^0.11.40",
+    "eslint-prettier": "^0.0.0-empty",
     "fs": "^0.0.1-security",
     "graphql": "^16.5.0",
     "igniteui-react-charts": "^16.16.3",
@@ -21,14 +24,22 @@
     "igniteui-react-grids": "^16.16.3",
     "igniteui-react-maps": "^16.16.3",
     "igniteui-react-spreadsheet": "^16.16.3",
+    "install": "^0.13.0",
+    "kafkajs": "^2.1.0",
+    "lodash": "^4.17.21",
     "memory-cache": "^0.2.0",
+    "monaco-themes": "^0.4.2",
     "net": "^1.0.2",
     "next": "latest",
     "next-redux-wrapper": "^7.0.5",
+    "npm": "^8.19.2",
+    "prettier": "^2.7.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
